--- a/OSvjezba03.tex
+++ b/OSvjezba03.tex
@@ -1,4 +1,4 @@
-\subsection*{Naredbe za navigaciju file systemom}
+\section{Naredbe za navigaciju file systemom}
 U radu s terminalom bitan podatak je tekući direktorij. To je trenutna pozicija u datotečnom sustavu.
 Datotečni sustav ima hijerarhijsku strukturu direktorija. Na vrhu je root direktorij (/), njegova djeca su \texttt{bin}, \texttt{home}, \texttt{sbin}, \texttt{var}, \texttt{proc} itd.
 \begin{itemize}
@@ -76,7 +76,7 @@ mv tko gdje
 \end{primjer}
 
 \end{itemize}
-\subsection*{Naredbe za navigaciju file systemom}
+%\section{Zadaci}
 \begin{zadatak}
 Isprobajte:
 \begin{itemize}
@@ -97,12 +97,12 @@ Isprobajte:
 \item Izlistajte popis datoteka u tekućem direktoriju. Naredba \texttt{ls}. Ispitajte opcije naredbe \texttt{ls}: \texttt{ls -a, ls -l, ls -d, ls -t, ls .., ls .} i kombinacije npr. \texttt{ls -ltr}.
 \item Kopirajte datoteku \texttt{prva} u direktorij \texttt{vjezba3}. Naredba \texttt{cp}.
 \item Preimenujte datoteku \texttt{prva} u \texttt{prvatmp} koristeći naredbu \texttt{mv}.
-\item Pomaknite datoteku \texttt{druga} u\chapter{Vježba 2} direktorij \texttt{vjezba3} i preimenujte je koristeći samo jednu naredbu \texttt{mv}.
+\item Pomaknite datoteku \texttt{druga} u direktorij \texttt{vjezba3} i preimenujte je koristeći samo jednu naredbu \texttt{mv}.
 \item Izlistajte sadržaj direktorija \texttt{tmp} u obrnutom redoslijedu.
 \item Kopirajte direktorij \texttt{tmp} i sve datoteke u njemu u direktorij \texttt{tmp2}. Koristite opciju \texttt{cp -R}.
 \end{itemize}
 \end{zadatak}
-\subsection*{Putevi \textit{paths}}
+\section{Putevi \textit{paths}}
 \begin{itemize}
  \item Prikažite svoj \texttt{search path}. Naredba \texttt{echo \$PATH\$}
 %\item Eksportirajte neki path sa \texttt{export PATH=blabla} i pokušajte izlistati sadržaj direktorija.
@@ -112,7 +112,7 @@ Isprobajte:
 \item Vratite se u direktorij vjezba3.
 \end{itemize}
 
-\subsection*{Direktorij \texttt{/proc} }
+\section{Direktorij \texttt{/proc} }
 \begin{itemize}
  \item Idite u \texttt{/proc} direktorij.
 \item Koji CPU koristi vaše računalo?
