--- a/OSvjezba04.tex
+++ b/OSvjezba04.tex
@@ -1,4 +1,4 @@
-\section*{Wildcards}
+\section{Wildcards}
 \begin{center}
 \begin{tabular}{lll}
 \toprule
@@ -22,7 +22,7 @@ znak & značenje & primjer\\
  \end{itemize}
 \end{zadatak}
 
- \section*{Naredbe za pretraživanje file systema}
+ \section{Naredbe za pretraživanje file systema}
 \subsection*{Pretraživanje naredbom \texttt{find}}
 Sintaksa \texttt{find <path> -name <searchstring>}.
 \begin{center}
