--- a/OSvjezba08.tex
+++ b/OSvjezba08.tex
@@ -1,6 +1,6 @@
-\section*{Shell skripte}
+\section{Shell skripte}
 
-\subsection*{Što su shell skripte i čemu služe?}
+%\subsection*{Što su shell skripte i čemu služe?}
 \textbf{Skripta} je datoteka koja sadrži naredbe shella. Shell čita datoteku i izvršava naredbu po naredbu kao da je pisana putem tipkovnice. Na taj način ne moramo pamtiti naredbe, poslovi se mogu izvršavati u određeno vrijeme, ne gubimo vrijeme rješavajući problem putem GUI-a.
 
 \begin{primjer} Primjeri shell skripti: 
