--- a/OSvjezba09.tex
+++ b/OSvjezba09.tex
@@ -1,4 +1,4 @@
-\section*{Shell skripte ... nastavak}
+\section{Shell skripte ... nastavak}
 
 \subsection*{Uvjetno izvršavanje}
 \textbf{Uvjetno izvršavanje} je izvršavanje naredbe ili skupa naredbi u ovisnosti o povratnoj vrijednosti druge naredbe. Realizira se pomoću \texttt{if then else fi} notacije.
