--- a/OSvjezba10.tex
+++ b/OSvjezba10.tex
@@ -1,4 +1,4 @@
-\section*{Procesi}
+\section{Procesi}
 \subsection*{Proces}
 Proces je program u izvršavanju zajedno sa svojim virtualnim adresnim prostorom. Svaki proces ima pridružene i sljedeće vrijednosti:
 \begin{itemize}
