Vježba 1, zadatak 2 (teminal i upload historija)

--- a/OSvjezba01.tex
+++ b/OSvjezba01.tex
@@ -30,4 +30,21 @@ U ovoj vježbi instalirat ćemo Linux OS Mint distribuciju koja je bazirana na U
 \end{itemize}
 \end{zadatak}
  
+ \begin{zadatak} Isprobati funkcionalnosti ditribucije Linux Mint
 
+Postavite prozor virtualnog stroja preko cijelog ekrana \textit{(Full screen mode)}. Sve vježbe ubuduće radit ćemo u Linuxu namještenom preko cijelog ekrana. Pokrenite preglednik i pristupite sustavu Moodle. Isprobajte programe Calculator, Files (\textit{Nemo File Manager}), Double Commander, Gedit (\textit{Text Editor}). Na kraju pokrenite terminal i isprobajte naredbe \texttt{echo} i \texttt{history}.
+\\
+\\
+\texttt{echo "Hello world"}\break
+\texttt{echo "Ime Prezime"}\break
+\texttt{history}
+\\
+\\
+Usmjerite izlaz naredbe \texttt{history} u datoteku koju ćete predati preko sustava Moodle \textbf{(pažljivo pročitajte upute za vježbe)}:\\
+\texttt{history  \textgreater \  naziv\_datoteke}
+\\
+\\
+Pokrenite \textit{file manager}, potražite stvorenu datoteku i pregledajte je u editoru teksta.
+Predajte datoteku prema uputama za vježbe. 
+
+\end{zadatak}
