Od Minta 18 defaultni tekst editor je xed, a gedit nije instaliran

--- a/OSvjezba01.tex
+++ b/OSvjezba01.tex
@@ -32,7 +32,7 @@ U ovoj vježbi instalirat ćemo Linux OS Mint distribuciju koja je bazirana na U
  
  \begin{zadatak} Isprobati funkcionalnosti ditribucije Linux Mint
 
-Postavite prozor virtualnog stroja preko cijelog ekrana \textit{(Full screen mode)}. Sve vježbe ubuduće radit ćemo u Linuxu namještenom preko cijelog ekrana. Pokrenite preglednik i pristupite sustavu Moodle. Isprobajte programe Calculator, Files (\textit{Nemo File Manager}), Double Commander, Gedit (\textit{Text Editor}). Na kraju pokrenite terminal i isprobajte naredbe \texttt{echo} i \texttt{history}.
+Postavite prozor virtualnog stroja preko cijelog ekrana \textit{(Full screen mode)}. Sve vježbe ubuduće radit ćemo u Linuxu namještenom preko cijelog ekrana. Pokrenite preglednik i pristupite sustavu Moodle. Isprobajte programe Calculator, Files (\textit{Nemo File Manager}), Double Commander, xed ili gedit (editori teksta). Na kraju pokrenite terminal i isprobajte naredbe \texttt{echo} i \texttt{history}.
 \\
 \\
 \texttt{echo "Hello world"}\break
