--- a/OSvjezba02.tex
+++ b/OSvjezba02.tex
@@ -118,7 +118,7 @@ Programi za Linux OS u najvećoj mjeri su pisani u programskim jezicima C/C++, P
 Kompajlirati jednostavan C program. 
 \begin{itemize}
  \item Kreirati datoteku \texttt{hello.c} koristeći naredbu \textbf{\texttt{touch}}.
- \item Otvoriti datoteku programom \texttt{gedit}, \texttt{kate}, \texttt{nano}, \texttt{codeblocks} ili nekim editorom.
+ \item Otvoriti datoteku programom \texttt{xed}, \texttt{gedit}, \texttt{kate}, \texttt{nano}, \texttt{codeblocks} ili nekim editorom.
  \item Napisati neki jednostavan C program (npr.~program koji ispisuje poruku "Hello world!").
 \item Iskompajlirati program: \texttt{gcc hello.c -o hello}. Opcija \lstinline!-o ime! daje ime izvršnoj datoteci. Ako te opcije nema, izvršna datoteka zvat će se \lstinline!a.out! 
 \begin{itemize}
