--- a/OSvjezba02.tex
+++ b/OSvjezba02.tex
@@ -12,7 +12,7 @@ Svaka riječ u naredbenom retku je pridružena nizu stringova. Prva riječ ima i
 
 Na Linux OS možemo koristiti programe \texttt{Konsole} ili \texttt{xterm} kao CLI  ili instalirati neki drugi CLI (\texttt{yakuake, guake, terminator, eterm} itd.). Uobičajeno naziv za te programe je konzola ili terminal.
 
-Kod korisštenja terminala važan nam je podatak u kojem dijelu datotečnog sustava se nalazimo. Inicijalno je to \textit{home} direktorij (u našem slučaju \texttt{/home/student}). Kratica za \textit{home} direktorij je \lstinline!~!.
+Kod korištenja terminala važan nam je podatak u kojem dijelu datotečnog sustava se nalazimo. Inicijalno je to \textit{home} direktorij (u našem slučaju \texttt{/home/student}). Kratica za \textit{home} direktorij je \lstinline!~!.
 
 \begin{primjer}
 Pozicioniranje u \textit{home} direktorij
@@ -63,7 +63,7 @@ Izvršiti sljedeće naredbe u komandnoj liniji.
 \item \texttt{history}
 \item \texttt{history 10}
 \item \texttt{!10}
-\item ponovno pokretanje naredbe iz historyja sa modifikacijom: \texttt{!echo:s/world/you}
+\item ponovno pokretanje naredbe iz historyja s modifikacijom: \texttt{!echo:s/world/you}
 \item pretraga history-ja: <Ctrl-R>\texttt{ech}
 \end{itemize}
 \end{zadatak}
