vjezba 3 - minor changes

--- a/OSvjezba03.tex
+++ b/OSvjezba03.tex
@@ -49,7 +49,7 @@ rmdir ime_dir
 
 \item \texttt{cp} kopira datoteke ili direktorije
 \begin{prototip}
-cp tko gdje 
+cp sto gdje 
 \end{prototip}
 
 \begin{primjer} Primjer korištenja naredbe \texttt{cp}
@@ -63,7 +63,7 @@ cp tko gdje
 
 \item \texttt{mv} premješta datoteke ili direktorije
 \begin{prototip}
-mv tko gdje
+mv sto gdje
 \end{prototip}
 
 \begin{primjer} Primjer korištenja naredbe \texttt{mv}.
@@ -128,7 +128,3 @@ Isprobajte:
 %\item Promijenite dozvole za datoteke koje ste kreirali u direktoriju \texttt{tmp2}
 %\end{itemize}
 \vfill
-\begin{itemize}
-\renewcommand{\labelitemi}{\textbf{$\rightarrow$}}
-\item Popis svih pokrenutih naredbi eksportirajte u datoteku imena \texttt{prezime\_ime\_vj3.txt}. Uploadajte datoteku na \href{https://moodle.oss.unist.hr/course/view.php?id=133}{http://moodle.oss.unist.hr}.
-\end{itemize}
