--- a/OSvjezba09.tex
+++ b/OSvjezba09.tex
@@ -125,7 +125,7 @@ count=0
 max=10
 while [ $count != $max ]; do count=`expr $count + 1`
     echo "$count"
-donemoodle
+done
 \end{lstlisting}
 \end{primjer}
 
