--- a/OSvjezba_standalone.tex
+++ b/OSvjezba_standalone.tex
@@ -5,18 +5,18 @@
 
 \title
 {Operativni sustavi\\
-Vježba 2}
+Vježba 1}
 \date{}
 
 
 \begin{document}
 \maketitle
-\begin{itemize}
-\item Sve naredbe dane u primjerima treba izvršiti.
-\item Na početku svake vježbe obrisati stari \texttt{history} naredbom \texttt{history -c}.
-\item Kreirati radni direktorij \texttt{vase\_prezime\_vjezbaxx} i u njemu izvršavati naredbe (\lstinline!mkdir vase_prezime_vjezbaxx!).
- \item Na kraju vježbi spremiti i uploadati history prema uputama za vježbe.
- \item Obrisati direktorij \texttt{vase\_prezime\_vjezbaxx} (\lstinline!rm -rf vase_prezime_vjezbaxx!).
-\end{itemize}
-\input{OSvjezba02.tex}
+% \begin{itemize}
+% \item Sve naredbe dane u primjerima treba izvršiti.
+% \item Na početku svake vježbe obrisati stari \texttt{history} naredbom \texttt{history -c}.
+% \item Kreirati radni direktorij \texttt{vase\_prezime\_vjezbaxx} i u njemu izvršavati naredbe (\lstinline!mkdir vase_prezime_vjezbaxx!).
+% \item Na kraju vježbi spremiti i uploadati history prema uputama za vježbe.
+% \item Obrisati direktorij \texttt{vase\_prezime\_vjezbaxx} (\lstinline!rm -rf vase_prezime_vjezbaxx!).
+% \end{itemize}
+\input{OSvjezba01.tex}
 \end{document}
