ispravljeno par sitnica

--- a/OSvjezba01.tex
+++ b/OSvjezba01.tex
@@ -1,9 +1,9 @@
 
 
-\section{Instaliranje Linux operativnog sustava na virtualnu mašinu}
-Virtualna mašina (VM) je program koji simulira računalo i na koju možemo instalirati drugi operativni sustav. Operativni sustav (OS) računala zovemo \textit{host} OS, a operativni sustav instaliran na VM zovemo \textit{guest} OS.
+\section{Instaliranje operativnog sustava Linux na virtualni stroj}
+Virtualni stroj \textit{(Virtual Machine, VM)} je program koji simulira računalo i na koju možemo instalirati drugi operativni sustav. Operativni sustav (OS) računala zovemo \textit{host} OS, a operativni sustav instaliran na VM zovemo \textit{guest} OS.
 
-U ovoj vježbi instalirat ćemo Linux OS Mint distribuciju koja je bazirana na Ubuntu distribuciji koja je pak bazirana na Debian distribuciji. Sve \textit{Debian-based} distribucije imaju isti sustav pakiranja i instaliranja programa.
+U ovoj vježbi instalirat ćemo 32-bitnu Linux OS Mint distribuciju koja je bazirana na Ubuntu distribuciji koja je pak bazirana na Debian distribuciji. Sve \textit{Debian-based} distribucije imaju isti sustav pakiranja i instaliranja programa.
 
 \begin{zadatak} Slijediti sljedeće korake instalacije:
 \begin{itemize}
@@ -30,7 +30,7 @@ U ovoj vježbi instalirat ćemo Linux OS Mint distribuciju koja je bazirana na U
 \end{itemize}
 \end{zadatak}
  
- \begin{zadatak} Isprobati funkcionalnosti ditribucije Linux Mint
+ \begin{zadatak} Isprobati funkcionalnosti distribucije Linux Mint
 
 Postavite prozor virtualnog stroja preko cijelog ekrana \textit{(Full screen mode)}. Sve vježbe ubuduće radit ćemo u Linuxu namještenom preko cijelog ekrana. Pokrenite preglednik i pristupite sustavu Moodle. Isprobajte programe Calculator, File Browser, System monitor, xed ili gedit (editori teksta). Na kraju pokrenite terminal i isprobajte naredbe \texttt{echo} i \texttt{history}.
 \\
@@ -45,6 +45,6 @@ Usmjerite izlaz naredbe \texttt{history} u datoteku koju ćete predati preko sus
 \\
 \\
 Pokrenite \textit{file manager}, potražite stvorenu datoteku i pregledajte je u editoru teksta.
-Predajte datoteku prema uputama za vježbe. 
+Predajte datoteku na način opisan u uputama za vježbe.
 
 \end{zadatak}
