Preamble: option to disable TODO notes

--- a/newpreamble.tex
+++ b/newpreamble.tex
@@ -444,6 +444,8 @@
 %-----------------------------------------
 \usepackage{verbatim}
 \usepackage{todonotes}
+%\usepackage[disable]{todonotes}
+
 \usepackage{bitset}
 %\usepackage{fmtcount}% http://ctan.org/pkg/fmtcount
 %\newcounter{mycounter}%
