Upute na početku vježbe (pokretanje s vm launcherom)

--- a/OSvjezba_standalone.tex
+++ b/OSvjezba_standalone.tex
@@ -5,18 +5,24 @@
 
 \title
 {Operativni sustavi\\
-Vježba 1}
+Vježba 4}
 \date{}
 
 
 \begin{document}
 \maketitle
-% \begin{itemize}
+\begin{itemize}
 % \item Sve naredbe dane u primjerima treba izvršiti.
 % \item Na početku svake vježbe obrisati stari \texttt{history} naredbom \texttt{history -c}.
 % \item Kreirati radni direktorij \texttt{vase\_prezime\_vjezbaxx} i u njemu izvršavati naredbe (\lstinline!mkdir vase_prezime_vjezbaxx!).
 % \item Na kraju vježbi spremiti i uploadati history prema uputama za vježbe.
 % \item Obrisati direktorij \texttt{vase\_prezime\_vjezbaxx} (\lstinline!rm -rf vase_prezime_vjezbaxx!).
-% \end{itemize}
-\input{OSvjezba01.tex}
+
+
+\item Sve naredbe dane u primjerima treba izvršiti.
+\item Na početku svake vježbe pokrenuti Linux Mint uz pomoć programa \textit{Virtual Machine Launcher}
+\item Na kraju vježbe spremiti i uploadati povijest naredbi prema uputama za vježbe.
+
+\end{itemize}
+\input{OSvjezba04.tex}
 \end{document}
