komentirani todo u preambuli

--- a/newpreamble.tex
+++ b/newpreamble.tex
@@ -443,8 +443,8 @@
 % VARIOUS
 %-----------------------------------------
 \usepackage{verbatim}
-\usepackage{todonotes}
-%\usepackage[disable]{todonotes}
+%\usepackage{todonotes}
+\usepackage[disable]{todonotes}
 
 \usepackage{bitset}
 %\usepackage{fmtcount}% http://ctan.org/pkg/fmtcount
