--- a/sa_preamble.tex
+++ b/sa_preamble.tex
@@ -324,7 +324,8 @@
 % VARIOUS
 %-----------------------------------------
 \usepackage{verbatim}
-\usepackage{todonotes}
+%\usepackage{todonotes}
+\usepackage[disable]{todonotes}
 \usepackage{bitset}
 
 
