Dodan novi zadatak (kopiranje datoteka uz pomoć wildcarda)

--- a/OSvjezba04.tex
+++ b/OSvjezba04.tex
@@ -27,6 +27,21 @@ znak & značenje & primjer\\
  \end{itemize}
 \end{zadatak}
 
+\begin{zadatak} \
+	\begin{itemize}
+		
+		\item napravite direktorij \texttt{log\_backup} pa u njega kopirajte sve datoteke iz direktorija \texttt{/var/log} čiji naziv završava na \texttt{.log}
+		
+		\item iz direktorija \texttt{log\_backup} izbrišite one datoteke čiji naziv počinje sa slovom \texttt{a}
+		
+		\item napravite direktorij \texttt{bin\_backup} pa u njega kopirajte sve datoteke iz direktorija \texttt{/usr/bin} koje imaju naziv duljine točno jedan znak
+		
+		\item napravite direktorij \texttt{etc\_backup} pa u njega kopirajte sve datoteke iz direktorija \texttt{/etc/grub.d} čiji naziv počinje brojem manjim od 10
+	\end{itemize}
+	
+\end{zadatak}
+
+
  \section{Naredbe za pretraživanje datotečnog sustava}
 \subsection*{Pretraživanje naredbom \texttt{find}}
 Sintaksa: \texttt{find <path> -name <searchstring>}.
