todo komentar u zaglavlje standalone verzije (upozorenje da je iskompajlirana kriva verzija i da nije za objavu)

--- a/OSvjezba_standalone.tex
+++ b/OSvjezba_standalone.tex
@@ -5,13 +5,14 @@
 
 \title
 {Operativni sustavi\\
-Vježba 4}
+Vježba 5}
 \date{}
 
 
 \begin{document}
 \maketitle
-\begin{itemize}
+\todo[inline]{Radna verzija dokumenta (TODO nije zakomentiran) }
+
 % \item Sve naredbe dane u primjerima treba izvršiti.
 % \item Na početku svake vježbe obrisati stari \texttt{history} naredbom \texttt{history -c}.
 % \item Kreirati radni direktorij \texttt{vase\_prezime\_vjezbaxx} i u njemu izvršavati naredbe (\lstinline!mkdir vase_prezime_vjezbaxx!).
@@ -19,10 +20,11 @@ Vježba 4}
 % \item Obrisati direktorij \texttt{vase\_prezime\_vjezbaxx} (\lstinline!rm -rf vase_prezime_vjezbaxx!).
 
 
+\begin{itemize}
 \item Sve naredbe dane u primjerima treba izvršiti.
 \item Na početku svake vježbe pokrenuti Linux Mint uz pomoć programa \textit{Virtual Machine Launcher}
 \item Na kraju vježbe spremiti i uploadati povijest naredbi prema uputama za vježbe.
 
 \end{itemize}
-\input{OSvjezba04.tex}
+\input{OSvjezba05.tex}
 \end{document}
